--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj.filters
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj.filters
@@ -119,6 +119,15 @@
     <Filter Include="ソース ファイル\Game\Cutin">
       <UniqueIdentifier>{4974ca3f-ffce-45f3-bd28-b769e581a665}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソース ファイル\Game\Field\Event">
+      <UniqueIdentifier>{a4ce8104-9429-4a75-999f-de5924e0c353}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ソース ファイル\Game\Field\Object\Obstacle">
+      <UniqueIdentifier>{7e77bf34-d6ee-4dab-92fe-fc4da37a50bb}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ソース ファイル\Game\Field\Event\CStage3">
+      <UniqueIdentifier>{c2282c42-2a77-47b8-ba71-dd800d09e091}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp">
@@ -615,6 +624,15 @@
     </ClCompile>
     <ClCompile Include="src\Game\CResultAnnouncement.cpp">
       <Filter>ソース ファイル\Game\UI\Menu</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Game\CObstacle.cpp">
+      <Filter>ソース ファイル\Game\Field\Object\Obstacle</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Game\CObstacleWall.cpp">
+      <Filter>ソース ファイル\Game\Field\Object\Obstacle</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Game\CBlueMedalEvent.cpp">
+      <Filter>ソース ファイル\Game\Field\Event\CStage3</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1136,6 +1154,15 @@
     </ClInclude>
     <ClInclude Include="src\Game\CResultAnnouncement.h">
       <Filter>ソース ファイル\Game\UI\Menu</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Game\CObstacle.h">
+      <Filter>ソース ファイル\Game\Field\Object\Obstacle</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Game\CObstacleWall.h">
+      <Filter>ソース ファイル\Game\Field\Object\Obstacle</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Game\CBlueMedalEvent.h">
+      <Filter>ソース ファイル\Game\Field\Event\CStage3</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
