リザルト関連を修正 UIを修正

--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
@@ -80,6 +80,7 @@
     <ClCompile Include="src\Game\CCutInCamera.cpp" />
     <ClCompile Include="src\Game\CCutInClear.cpp" />
     <ClCompile Include="src\Game\CCutInDeath.cpp" />
+    <ClCompile Include="src\Game\CCutInResult.cpp" />
     <ClCompile Include="src\Game\CCutInTest.cpp" />
     <ClCompile Include="src\Game\CEnemy.cpp" />
     <ClCompile Include="src\Game\CEnemyManager.cpp" />
@@ -265,6 +266,7 @@
     <ClInclude Include="src\Game\CCutInCamera.h" />
     <ClInclude Include="src\Game\CCutInClear.h" />
     <ClInclude Include="src\Game\CCutInDeath.h" />
+    <ClInclude Include="src\Game\CCutInResult.h" />
     <ClInclude Include="src\Game\CCutInTest.h" />
     <ClInclude Include="src\Game\CEnemy.h" />
     <ClInclude Include="src\Game\CEnemyManager.h" />
